[tool.poetry]
name = "github_tools"
version = "2.1.0"
description = "A collection of tools for interactive with GitHub"
authors = ["Brad Brown <brad@bradsbrown.com>", "Doug Philips <dgou@mac.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.10"
"github3.py" = "^1.1.0"
tomlkit = "^0.5.3"

[tool.poetry.dev-dependencies]
pre-commit = "^1.15"
sphinx = "^2.0"
sphinx-rtd-theme = "^0.4.3"
sphinx_autodoc_typehints = "^1.6"
ghp-import = "^0.5.5"

[tool.poetry.scripts]
gt-assign-pr = 'github_tools:assign_pr_cli'
gt-pr-doc-link = 'github_tools:post_docs_link_cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

